--- a/portal.html
+++ b/portal.html
@@ -1144,13 +1144,13 @@
 
             <div style="text-align: center;">
                 <a href="https://calendly.com/billyjoinville/session-full-setups" class="contact-button">
-                    Schedule a session
+                    Schedule A Session
                 </a>
 
                 <br>
                 <br>
 
-                <a href="contact-us.html" class="contact-button">  Submit Website Request</a>
+                <a href="contact-us.html" class="contact-button"> Submit a Website Request</a>
     
 
                 <br>
@@ -1188,13 +1188,13 @@
 
             <div style="text-align: center;">
                 <a href="https://calendly.com/billyjoinville/session-full-setups" class="contact-button">
-                    Schedule Sessions
+                    Schedule A Session
                 </a>
 
                 <br>
                 <br>
 
-                <a href="contact-us.html" class="contact-button">  Website Requests</a>
+                <a href="contact-us.html" class="contact-button">  Submit a Website Request</a>
     
 
                 <br>
