--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <title>WebEaze</title>
     <meta name="description" content="Effortless. Affordable. Supported.">
     <link href="css/billy-joinville.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/website-services-logo.jpg" type="image/jpg">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <meta property="og:title" content="WebEaze">
     <meta property="og:description" content="Effortless. Affordable. With Support">
