--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     <meta property="og:url" content="https://www.webeaze.io">
     <meta property="og:image" content="images/favicon.png">
 
-    <meta name="twitter:card" content="images/website-services-logo.jpg">
+    <meta name="twitter:card" content="images/favicon.png">
     <meta name="twitter:title" content="WebEaze - Effortless & Affordable websites, with 24/7 Support">
     <meta name="twitter:description" content="Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:image" content="images/website-services-logo.jpg">
+    <meta name="twitter:image" content="images/favicon.png">
 
 </head>
 
@@ -1454,41 +1454,46 @@
 
 
             <div class="faq-item">
-                <h3 class="faq-question">Do I need any technical skills to work with you? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer">No technical skills required! My offering is designed to be user-friendly and accessible to everyone. I handle the entire setup for you, so you can focus on what you do best.
+                <h3 class="faq-question">What is WebEaze? <span class="arrow"> ▼ </span></h3>
+                <p class="faq-answer">
+                    WebEaze is small web design company that offers affordable, professional websites for individuals and organizations. We provide a range of services to help you get online quickly and easily, including website design, hosting, and maintenance. Our goal is to make it effortless for you to create a website that looks great and works well, without the hassle of doing it yourself.
                 </p>
-
             </div>
 
             <div class="faq-item">
-                <h3 class="faq-question">Do you work with existing websites? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer"> Yes, I can work with existing websites to make updates, changes, or improvements. I'll review your site and provide recommendations for how we can work together to make it even better. The same pricing applies for existing websites as it does for new websites.  
+                <h3 class="faq-question">Do you have any samples? <span class="arrow"> ▼ </span></h3>
+                <p class="faq-answer">
+                    Yes! Please email us here at <strong><a href="mailto:info@webeaze.com">info@webeaze.io</a></strong> to get a complete list of samples.
+            
+
+                </p>
+            </div>
+
+            <div class="faq-item">
+                <h3 class="faq-question">What if I have an existing website? <span class="arrow"> ▼ </span></h3>
+                <p class="faq-answer"> We offer services for existing websites, including updates, redesigns, and troubleshooting. Our Growth and Elite packages are designed to help you grow your online presence and reach your goals. 
                 </p>
             </div>
 
 
      
             <div class="faq-item">
-                <h3 class="faq-question">How long does it take for my site to go live? <span class="arrow"> ▼ </span></h3>
-                <p class="faq-answer">The process generally takes between 1-2 weeks, depending on the complexity of the site. I'll keep you updated on the progress and make sure you're satisfied with the final product.
+                <h3 class="faq-question">When can you finish my website? <span class="arrow"> ▼ </span></h3>
+                <p class="faq-answer"> For new websites, we aim to complete your website within 1-2 weeks, depending on the complexity of the project. For existing websites, we'll work with you to find a timeline that works. We'll keep you updated on our progress and let you know when your website is ready to go live.
                 </p>
             </div>
 
-
             <div class="faq-item">
-                <h3 class="faq-question">Will the website be optimized for mobile? <span class="arrow"> ▼ </span></h3>
-
-                <p class="faq-answer">Absolutely! Every website I create is optimized for mobile devices and search engines. This ensures your site is accessible to everyone and has the potential to rank higher in search results, which is great for your online presence.
+                <h3 class="faq-question"> How much support do I get? <span class="arrow"> ▼ </span></h3>
+                <p class="faq-answer"> We offer 12 months of support with any package you purchase. This includes updates, maintenance, and troubleshooting. We're here to help, so you can reach out to us anytime you need assistance.
                 </p>
-
             </div>
 
             <div class="faq-item">
-                <h3 class="faq-question">Do you offer additional support for my website? <span class="arrow"> ▼ </span></h3>
-
-                <p class="faq-answer"> Yes, I provide 18 months of support for updates, changes, or troubleshooting. I'm here to help you succeed online, whether it's a new website or an existing one.
+                <h3 class="faq-question">Are there any other costs after purchasing the package?<span class="arrow"> ▼ </span></h3>
+                <p class="faq-answer">
+                    No! We're transparent about our pricing and services, so you know exactly what you're getting upfront. Any external service fees (e.g., domain registration, hosting) will be communicated to you before any purchase is made. 
                 </p>
-
             </div>
 
 
@@ -1694,7 +1699,7 @@
             "Fancy a new website? Welcome!",
             "Domains add professionalism. Do you have one?",
             "Need a website but don't know where to start?",
-            "Hourly rates? Forget it. One package starting at $499."
+            "Hourly rates? Forget it. One package starting at $699."
         ];
 
         const randomIndex = Math.floor(Math.random() * questions.length);
