--- a/site-map.html
+++ b/site-map.html
@@ -14,7 +14,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Site Map</title>
+    <title>Site Map | WebEaze</title>
     <meta name="description" content="Effortless. Affordable. Supported.">
     <link href="css/billy-joinville.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
