--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <meta property="og:title" content="WebEaze">
-    <meta property="og:description" content="Effortless. Affordable. With Support">
+    <meta property="og:description" content="Effortless. Affordable. With Support.">
     <meta property="og:url" content="https://www.webeaze.io">
     <meta property="og:image" content="images/favicon.png">
 
@@ -942,7 +942,7 @@
         width: 100%;
         margin-top: -10px; 
         font-weight: bold;
-        font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif !important; 
+        font-family: Roboto 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
 
     .navbar a {
@@ -1189,7 +1189,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="contact-us.html">Contact Us</a>
                 </li>
 
               </ul>
@@ -1215,14 +1215,14 @@
 
         
 
-            <p id="intro-services-html-next2">Effortless.</p>
+            <p id="intro-services-html-next2">Elegant and Effortless.</p>
             <img src="images/cover-background-1.png" alt="Cover Background">
             <br>
             <p id="intro-services-html-next2">Affordable.</p>
             <br>
             <img src="images/cover-background-3.png" alt="Cover Background">
             <br>
-            <p id="intro-services-html-next2">With Support.</p>
+            <p id="intro-services-html-next2">Personalized Support. </p>
             <br>
             <br>
 
