--- a/contact-us.html
+++ b/contact-us.html
@@ -1365,7 +1365,7 @@
  
  
 
-    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on GitHub.</p>
+    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on <a href="https://pages.github.com/">Github</a>.</p>
     <br>
 
 </footer>
