--- a/faq.html
+++ b/faq.html
@@ -17,17 +17,17 @@
     <title>FAQs | WebEaze</title>
     <meta name="description" content="Effortless. Affordable. Supported.">
     <link href="css/billy-joinville.css" rel="stylesheet">
-    <link rel="shortcut icon" href="images/website-services-logo.jpg" type="image/jpg">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <meta property="og:title" content="WebEaze">
     <meta property="og:description" content="Effortless. Affordable. With Support">
     <meta property="og:url" content="https://www.webeaze.io">
     <meta property="og:image" content="images/favicon.png">
 
-    <meta name="twitter:card" content="images/website-services-logo.jpg">
+    <meta name="twitter:card" content="images/favicon.png">
     <meta name="twitter:title" content="WebEaze - Effortless & Affordable websites, with 24/7 Support">
     <meta name="twitter:description" content="Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:image" content="images/website-services-logo.jpg">
+    <meta name="twitter:image" content="images/favicon.png">
 
 </head>
 
@@ -482,7 +482,7 @@
 
         .contact-button {
 
-            font-size: 10px;
+            font-size: 12px;
             width: 60%;
             margin: 0 auto;
         }
@@ -1176,7 +1176,7 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="contact.html">Contact Us</a>
+                  <a class="nav-link" href="contact-us.html">Contact Us</a>
                 </li>
 
               </ul>
@@ -1199,16 +1199,14 @@
             <div class="faq-item">
                 <h3 class="faq-question">What is WebEaze? <span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    WebEaze is small web design company that offers affordable, professional websites for individuals and organizations. We provide a range of services to help you get online quickly and easily, including website design, hosting, and maintenance. Our goal is to make it effortless for you to create a website that looks great and works well, without the hassle of doing it yourself.
+                    WebEaze is small web design company that offers affordable, professional websites for individuals and organizations. We provide a range of services to help you get online quickly and easily, including website design, hosting, and maintenance. Our goal is to make effortless yet elegant websites for you, without the hassle of doing it yourself.
                 </p>
             </div>
 
             <div class="faq-item">
                 <h3 class="faq-question">Do you have any samples? <span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    Yes! Please email us here at <strong><a href="mailto:info@webeaze.com">info@webeaze.io</a></strong> to get a complete list of samples.
-            
-
+                    Yes! Some are shown on our <a href="index.html">homepage</a>. If you're inquiring about a specific type of website, we can provide you with samples that are similar to what you're looking for. Please email us here at <strong><a href="mailto:info@webeaze.com">info@webeaze.io</a></strong> to get a complete list of samples.
                 </p>
             </div>
         
@@ -1339,8 +1337,7 @@
     <br>
  
 
-    <p id="footer-text">© 2025 Billy Joinville. All rights reserved.</p>
-    <p id="footer-text">Created, designed by Billy Joinville. Published on GitHub.</p>
+    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on <a href="https://pages.github.com/">Github</a>.</p>
     <br>
 
 </footer>
@@ -1475,7 +1472,7 @@
             "Here's some more questions",
             "Still not certain?",
             "Need more information?",
-            "Some FAQs",
+            "FAQs",
         ];
 
         const randomIndex = Math.floor(Math.random() * questions.length);
