--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1276,9 +1276,7 @@
 
     <br>
  
-
-    <p id="footer-text">© 2025 Billy Joinville. All rights reserved.</p>
-    <p id="footer-text">Created, designed by Billy Joinville. Published on GitHub.</p>
+    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on <a href="https://pages.github.com/">Github</a>.</p>
     <br>
 
 </footer>
