--- a/site-map.html
+++ b/site-map.html
@@ -1229,7 +1229,10 @@
                     <li><a href="https://billyjoinville.me/" target="_blank">About Us</a></li>
                     <li><a href="https://billyjoinvillewebservices.statuspage.io/" target="_blank">Service Status</a></li>
                     <li><a href="https://billyjoinville.me/terms" target="_blank">Terms & Privacy Policy</a></li>
-                    <li><a href="https://billing.stripe.com/p/login/7sI3gfaO14CEdlm144" target="_blank"></a>Stripe Payment Portal</li>
+
+                    <li>
+                        <a href="https://billing.stripe.com/p/login/7sI3gfaO14CEdlm144" target="_blank">Stripe Payment Portal</a>
+                    </li>
                 </ol>
 
         </div>
@@ -1267,8 +1270,7 @@
     <br>
  
 
-    <p id="footer-text">© 2025 Billy Joinville. All rights reserved.</p>
-    <p id="footer-text">Created, designed by Billy Joinville. Published on GitHub.</p>
+    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on <a href="https://pages.github.com/">Github</a>.</p>
     <br>
 
 </footer>
@@ -1401,6 +1403,8 @@
     document.addEventListener('DOMContentLoaded', () => {
         const questions = [
             "Site Map",
+            "Important Links",
+            "Navigation",
         ];
 
         const randomIndex = Math.floor(Math.random() * questions.length);
