--- a/index.html
+++ b/index.html
@@ -1461,11 +1461,10 @@
             </div>
 
             <div class="faq-item">
-                <h3 class="faq-question">Do you have any samples? <span class="arrow"> ▼ </span></h3>
+                <h3 class="faq-question" style="text-align: left;">Do you have any samples? <span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
                     Yes! Please email us here at <strong><a href="mailto:info@webeaze.com">info@webeaze.io</a></strong> to get a complete list of samples.
             
-
                 </p>
             </div>
 
@@ -1550,7 +1549,7 @@
     <br>
 
     <p>
-        <a href="terms.html">Terms of Service & Privacy Policy</a>
+        <a href="https://billyjoinville.me/terms">Terms & Privacy Policy</a>
     </p>
     <p>
         <a href="refund-policy.html">Refund Policy</a>
@@ -1563,8 +1562,7 @@
     <br>
  
 
-    <p id="footer-text">© 2025 Billy Joinville. All rights reserved.</p>
-    <p id="footer-text">Created, designed by Billy Joinville. Published on GitHub.</p>
+    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on <a href="https://pages.github.com/">Github</a>.</p>
     <br>
 
 </footer>
