--- a/portal.html
+++ b/portal.html
@@ -400,7 +400,7 @@
 
         footer p {
 
-            line-height: 1;
+
             color: white;
             text-align: center;
         }
@@ -1135,9 +1135,8 @@
 
             <h1><strong>New Website?</strong></h1>
 
-            <br>
 
-            <p>Expect a complete and functioning website within the next 1-2 weeks. You'll receive email updates from <strong>status@webeaze.com</strong>.</p>
+            <p style="padding: 40px; font-size: 20px ;">Expect a complete and functioning website within the next 1-2 weeks. You'll receive email updates from <strong>status@webeaze.com</strong>.</p>
 
             <br>
             <br>
@@ -1179,9 +1178,9 @@
 
             <h1><strong>Existing Website?</strong></h1>
 
-            <br>
 
-            <p>I'll begin working on your website after you have provided me relevant log in details to your site's backend, and your request by scheduling a session or submitting a request. <strong>At the moment, all communication will be done via email</strong>.</p>
+
+            <p style="padding: 40px; font-size: 20px ;">I'll begin working on your website after you have provided me relevant log in details to your site's backend, and your request by scheduling a session or submitting a request. <strong>At the moment, all communication will be done via email</strong>.</p>
 
             <br>
             <br>
@@ -1246,7 +1245,7 @@
     <br>
  
 
-    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on GitHub.</p>
+    <p id="footer-text">© 2025 WebEaze. Created, designed by WebEaze. Published on <a href="https://pages.github.com/">Github</a>.</p>
     <br>
 
 </footer>
