--- a/index.html
+++ b/index.html
@@ -1461,10 +1461,9 @@
             </div>
 
             <div class="faq-item">
-                <h3 class="faq-question" style="text-align: left;">Do you have any samples? <span class="arrow"> ▼ </span></h3>
+                <h3 class="faq-question">Do you have any samples?<span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    Yes! Please email us here at <strong><a href="mailto:info@webeaze.com">info@webeaze.io</a></strong> to get a complete list of samples.
-            
+                    Yes! We have a few samples under our 'Samples are important' section. You can also email us at <a href="mailto:info@webeaze.com">info@webeaze.com</a> and we'll provide a full list of samples for you to look at. 
                 </p>
             </div>
 
