--- a/contact-us.html
+++ b/contact-us.html
@@ -1356,10 +1356,10 @@
     </p>
 
     <p>
-        <a href="https://billyjoinville.me/refund-policy">Refund Policy</a>
+        <a href="refund-policy.html">Refund Policy</a>
     </p>
 
-    <p><a href="services.html">Back to Top</a></p>
+    <p><a href="contact-us.html">Back to Top</a></p>
 
     <br>
  
