--- a/portal.html
+++ b/portal.html
@@ -1142,7 +1142,7 @@
             <br>
 
             <div style="text-align: center;">
-                <a href="https://calendly.com/billyjoinville/session-full-setups" class="contact-button">
+                <a href="https://calendly.com/webeaze/session-full-setups" class="contact-button">
                     Schedule A Session
                 </a>
 
@@ -1186,7 +1186,7 @@
             <br>
 
             <div style="text-align: center;">
-                <a href="https://calendly.com/billyjoinville/session-full-setups" class="contact-button">
+                <a href="https://calendly.com/webeaze/session-full-setups" class="contact-button">
                     Schedule A Session
                 </a>
 
@@ -1237,10 +1237,10 @@
     </p>
 
     <p>
-        <a href="https://billyjoinville.me/refund-policy">Refund Policy</a>
+        <a href="refund-policy.html">Refund Policy</a>
     </p>
 
-    <p><a href="services.html">Back to Top</a></p>
+    <p><a href="portal.html">Back to Top</a></p>
 
     <br>
  
