--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1272,7 +1272,7 @@
 
     <p><a href="site-map.html">Site Map</a></p>
 
-    <p><a href="site-map.html">Back to Top</a></p>
+    <p><a href="refund-policy.html">Back to Top</a></p>
 
     <br>
  
