Updated type of logo

--- a/contact-us.html
+++ b/contact-us.html
@@ -1258,7 +1258,7 @@
 
             <a class="navbar-brand" href="index.html">
                
-                <img src="images/cover-2.png" alt="Brand Logo">
+                <img src="images/webeaze-transparent.png" alt="Brand Logo">
             </a> 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
@@ -1343,6 +1343,10 @@
 
         <a href="https://www.linkedin.com/company/billy-joinville-web-services/" target="_blank" aria-label="LinkedIn">
             <i class="fab fa-linkedin"></i>
+        </a>
+
+        <a href="https://www.instagram.com/webeaze.io/" target="_blank" aria-label="Instagram">
+            <i class="fab fa-instagram"></i>
         </a>
     </div>
 
