Updated email address

--- a/index.html
+++ b/index.html
@@ -1463,7 +1463,7 @@
             <div class="faq-item">
                 <h3 class="faq-question">Do you have any samples?<span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    Yes! We have a few samples under our 'Samples are important' section. You can also email us at <a href="mailto:info@webeaze.com">info@webeaze.com</a> and we'll provide a full list of samples for you to look at. 
+                    Yes! We have a few samples under our 'Samples are important' section. You can also email us at <a href="mailto:info@webeaze.io">info@webeaze.io</a> and we'll provide a full list of samples for you to look at. 
                 </p>
             </div>
 
