--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1224,7 +1224,7 @@
 
         <br>
 
-        <p style="text-align: center; font-size: 20px; color: white;"> <strong>Chargebacks and Disputes</strong>: In the event of a chargeback, you will be responsible for the full amount of the chargeback, as well as any additional fees that may be incurred. You will also lose access to all services provided by WebEaze. Any questions, or concerns? <a href="mailto:info@bjwebservices.com">Send us an email</a> and we will work with you to resolve them.
+        <p style="text-align: center; font-size: 20px; color: white;"> <strong>Chargebacks and Disputes</strong>: In the event of a chargeback, you will be responsible for the full amount of the chargeback, as well as any additional fees that may be incurred. You will also lose access to all services provided by WebEaze. Any questions, or concerns? <a href="mailto:info@webeaze.io">Send us an email</a> and we will work with you to resolve them.
         </p>
 
         <br>
