--- a/contact-us.html
+++ b/contact-us.html
@@ -15,19 +15,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Contact Us | WebEaze</title>
-    <meta name="description" content="Effortless. Affordable. Supported.">
+    <meta name="description" content="Elegant & Effortless. Affordable. With Personalized Support.">
     <link href="css/billy-joinville.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <meta property="og:title" content="WebEaze">
-    <meta property="og:description" content="Effortless. Affordable. With Support">
+    <meta property="og:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
     <meta property="og:url" content="https://www.webeaze.io">
     <meta property="og:image" content="images/favicon.png">
 
-    <meta name="twitter:card" content="images/cover-2.png">
-    <meta name="twitter:title" content="WebEaze - Effortless & Affordable websites, with 24/7 Support">
-    <meta name="twitter:description" content="Effortless. Affordable. With Personalized Support.">
-    <meta name="twitter:image" content="images/cover-2.png">
+    <meta name="twitter:card" content="images/favicon.png">
+    <meta name="twitter:title" content="WebEaze - Elegant & Effortless. Affordable. With Personalized Support.">
+    <meta name="twitter:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
+    <meta name="twitter:image" content="images/favicon.png">
 
 </head>
 
