--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>WebEaze</title>
-    <meta name="description" content="Effortless. Affordable. Supported.">
+    <title>WebEaze Web Design</title>
+    <meta name="description" content="Elegant & Effortless. Affordable. With Personalized Support.">
     <link href="css/billy-joinville.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
@@ -25,8 +25,8 @@
     <meta property="og:image" content="images/favicon.png">
 
     <meta name="twitter:card" content="images/favicon.png">
-    <meta name="twitter:title" content="WebEaze - Effortless & Affordable websites, with 24/7 Support">
-    <meta name="twitter:description" content="Effortless. Affordable. With Personalized Support.">
+    <meta name="twitter:title" content="WebEaze - Elegant & Effortless. Affordable. With Personalized Support.">
+    <meta name="twitter:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
     <meta name="twitter:image" content="images/favicon.png">
 
 </head>
