--- a/site-map.html
+++ b/site-map.html
@@ -20,7 +20,7 @@
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <meta property="og:title" content="WebEaze">
-    <meta property="og:description" content="Effortless. Affordable. With Support">
+    <meta property="og:description" content="Elegant & Effortless. Affordable. With Personalized Support.">
     <meta property="og:url" content="https://www.webeaze.io/site-map.html">
     <meta property="og:image" content="images/favicon.png">
 
