--- a/refund-policy.html
+++ b/refund-policy.html
@@ -15,13 +15,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Refund Policy | WebEaze</title>
-    <meta name="description" content="Effortless. Affordable. Supported.">
+    <meta name="description" content="Elegant & Effortless. Affordable. With Personalized Support.">
     <link href="css/billy-joinville.css" rel="stylesheet">
     <link rel="shortcut icon" href="images/favicon.png" type="image/png">
 
     <meta property="og:title" content="WebEaze">
     <meta property="og:description" content="Effortless. Affordable. With Support.">
-    <meta property="og:url" content="https://www.webeaze.io/site-map.html">
+    <meta property="og:url" content="https://www.webeaze.io/refund-policy.html">
     <meta property="og:image" content="images/favicon.png">
 
     <meta name="twitter:card" content="images/favicon.png">
