--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1218,7 +1218,7 @@
         <br>
         <br>
 
-        <p style="text-align: center; font-size: 20px; color: white;">All sales are final. No refunds will be issues after purchase due to the nature of the services provided.
+        <p style="text-align: center; font-size: 20px; color: white;">All sales are final. No refunds allowed after purchase due to the nature of the services provided. There are no exceptions.
         </p>
 
 
