--- a/portal.html
+++ b/portal.html
@@ -650,7 +650,7 @@
 
         footer p {
 
-                line-height: 2;
+                line-height: 1;
         }
 
 
@@ -1068,15 +1068,19 @@
 
         <h2 id="intro-services-html-next1">
 
-            Welcome to WebEaze. Bookmark this page for easy access to your client portal. 
+            Welcome to WebEaze. Bookmark this page for easy access to this client portal. We're working on an integrated user portal, <a href="contact-us.html">depending on feedback we receive from this page</a>.
         </h2>
 
-        <h2 id="intro-services-html-next1">
+        <p style="padding: 40px; font-size: 20px ;">
 
-            Below, you'll find important links relevant to your experience with WebEaze.
+            <strong>Growth package clients</strong>: We'll cover up to $124.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. 
 
-        </h2>
-
+            <br>
+            <br>
+            
+            <strong>Elite package clients</strong>: We'll cover all domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. This will be valid during the 12-month period of your package.
+        
+        </p>
 
          <nav class="navbar navbar-expand-lg navbar-light bg-transparent">
 
@@ -1138,8 +1142,7 @@
 
             <p style="padding: 40px; font-size: 20px ;">Expect a complete and functioning website within the next 1-2 weeks. You'll receive email updates from <strong>status@webeaze.com</strong>.</p>
 
-            <br>
-            <br>
+
 
             <div style="text-align: center;">
                 <a href="https://calendly.com/webeaze/session-full-setups" class="contact-button">
@@ -1182,8 +1185,6 @@
 
             <p style="padding: 40px; font-size: 20px ;">I'll begin working on your website after you have provided me relevant log in details to your site's backend, and your request by scheduling a session or submitting a request. <strong>At the moment, all communication will be done via email</strong>.</p>
 
-            <br>
-            <br>
 
             <div style="text-align: center;">
                 <a href="https://calendly.com/webeaze/session-full-setups" class="contact-button">
