--- a/index.html
+++ b/index.html
@@ -1449,7 +1449,7 @@
                     <h3>Ibis Prep</h3>
         
                     <p>
-                        Small tutoring company that offers tutoring services for K-12 subject areas and standardized test preparation.
+                        Tutoring company that offers tutoring services for K-12 subject areas and standardized test preparation.
                     </p>
         
                     <a href="https://ibisprep.com" target="_blank">ibisprep.com</a>
