--- a/portal.html
+++ b/portal.html
@@ -1071,7 +1071,7 @@
             Welcome to WebEaze. Bookmark this page for easy access to this client portal. We're working on an integrated user portal, <a href="contact-us.html">depending on feedback we receive from this page</a>.
         </h2>
 
-        <p style="padding: 40px; font-size: 20px ;">
+        <p id="discount-notice" style="padding: 40px; font-size: 14px; text-align: left">
 
             <strong>Growth package clients</strong>: We'll cover up to $124.90 of any domain and hosting costs in the form of a discount from the package cost, or the direct payment to your domain and hosting preferences. 
 
@@ -1140,7 +1140,7 @@
             <h1><strong>New Website?</strong></h1>
 
 
-            <p style="padding: 40px; font-size: 20px ;">Expect a complete and functioning website within the next 1-2 weeks. You'll receive email updates from <strong>status@webeaze.com</strong>.</p>
+            <p style="padding: 40px; font-size: 20px ;">Expect a complete and functioning website within the next 1-2 weeks. You'll receive email updates from <strong>support@webeaze.io</strong>.</p>
 
 
 
@@ -1159,7 +1159,7 @@
                 <br>
 
                 <a href="contact-us.html" class="contact-button">
-                    Get In Touch
+                    Contact Us
                 </a>
 
             
@@ -1201,7 +1201,7 @@
                 <br>
 
                 <a href="contact-us.html" class="contact-button">
-                    Get In Touch
+                    Contact Us
                 </a>
 
 
