--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1218,29 +1218,29 @@
         <br>
         <br>
 
-        <p style="text-align: center; font-size: 20px; color: white;">All sales are final. No refunds allowed after purchase due to the nature of the services provided. There are no exceptions.
+        <p style="text-align: left; font-size: 20px; color: white;">All sales are final. No refunds allowed after purchase due to the nature of the services provided. There are no exceptions.
         </p>
 
 
         <br>
 
-        <p style="text-align: center; font-size: 20px; color: white;"> <strong>Chargebacks and Disputes</strong>: In the event of a chargeback, you will be responsible for the full amount of the chargeback, as well as any additional fees that may be incurred. You will also lose access to all services provided by WebEaze. Any questions, or concerns? <a href="mailto:info@webeaze.io">Send us an email</a> and we will work with you to resolve them.
+        <p style="text-align: left; font-size: 20px; color: white;"> <strong>Chargebacks and Disputes</strong>: In the event of a chargeback, you will be responsible for the full amount of the chargeback, as well as any additional fees that may be incurred. You will also lose access to all services provided by WebEaze. Any questions, or concerns? <a href="mailto:info@webeaze.io">Send us an email</a> and we will work with you to resolve them.
         </p>
 
         <br>
 
-        <p style="text-align: center; font-size: 20px; color: white;">Any changes to features and benefits associated with your package will not result in any pro-rated refunds. 
+        <p style="text-align: left; font-size: 20px; color: white;">Any changes to features and benefits associated with your package will not result in any pro-rated refunds. 
         </p>
 
 
         <br>
 
-        <p style="text-align: center; font-size: 20px; color: white;"><strong>Unfinished Work</strong>: Rarely, WebEaze may contact you in regards to your website request in the event that we are unable to fulfill it. This doesn't grant you a full refund, however, we will review the situation and offer partial refund options. Funds paid are significantly used to cover the costs of the services, and the time used to research, plan, and deploy your website.
+        <p style="text-align: left; font-size: 20px; color: white;"><strong>Unfinished Work</strong>: Rarely, WebEaze may contact you in regards to your website request in the event that we are unable to fulfill it. This doesn't grant you a full refund, however, we will review the situation and offer partial refund options. Funds paid are significantly used to cover the costs of the services, and the time used to research, plan, and deploy your website.
         </p>
 
         <br>
 
-        <p style="text-align: center; font-size: 20px; color: white;">If you have any questions, please <strong><a href="contact-us.html">contact us</a></strong> and we will be happy to help.
+        <p style="text-align: left; font-size: 20px; color: white;">If you have any questions, please <strong><a href="contact-us.html">contact us</a></strong> and we will be happy to help.
         </p>
 
         <br>
