--- a/site-map.html
+++ b/site-map.html
@@ -1227,7 +1227,7 @@
                     </h2>
 
                     <li><a href="https://billyjoinville.me/" target="_blank">About Us</a></li>
-                    <li><a href="https://billyjoinvillewebservices.statuspage.io/" target="_blank">Service Status</a></li>
+                    <li><a href="https://webeaze.statuspage.io/" target="_blank">Service Status</a></li>
                     <li><a href="https://billyjoinville.me/terms" target="_blank">Terms & Privacy Policy</a></li>
 
                     <li>
