--- a/index.html
+++ b/index.html
@@ -1139,6 +1139,17 @@
 
 <body class="page-website-setup">
 
+    <header style="background-color: rgba(255, 19, 19, 0.496);" class="page-website-setup-header">
+
+        <br>
+        <br>
+        <br>
+
+
+        <p style="color: white; "><strong>Valentine's Day Sale</strong>: Save 14% using code <u>VDAY14</u> with any package. Ends 2/14/25.</strong></p>
+    
+    </header>
+
     
 
     <header id="header-services">
