--- a/index.html
+++ b/index.html
@@ -1244,9 +1244,9 @@
 
 
 
-            <h1 id="setup-packages-heading"><strong>Choose your flavor</strong> </h1>
+            <h1 id="setup-packages-heading"><strong>Choose your package</strong> </h1>
             <p id="intro-services-html-next2">
-                One-time payment, no hidden fees. All packages include 12 months of support and a free consultation prior.
+                One-time payment. All packages include a free consultation and 12 months of support for improvements and updates.
             </p>
 
      
