--- a/index.html
+++ b/index.html
@@ -1149,14 +1149,14 @@
 
 <body class="page-website-setup">
 
-    <header style="background-color: white" class="page-website-setup-header">
+    <header style="background-color: rgb(38, 38, 222);" class="page-website-setup-header">
 
         <br>
         <br>
         <br>
 
 
-        <p style="color: blue; "><strong>Celebrate Presidents' Day with a Website Upgrade</strong>:</strong> 5% off of any package using code <u>PREZ5</u>. Ends today.</p>
+        <p style="color: white; "><strong>Celebrate Presidents' Day with a Website Upgrade</strong>:</strong> 5% off of any package using code <u>PREZ5</u>. Ends today.</p>
     
     </header>
 
