Updated a few things

--- a/faq.html
+++ b/faq.html
@@ -1206,7 +1206,7 @@
             <div class="faq-item">
                 <h3 class="faq-question">Do you have any samples? <span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    Yes! Some are shown on our <a href="index.html">homepage</a>. If you're inquiring about a specific type of website, we can provide you with samples that are similar to what you're looking for. Please email us here at <strong><a href="mailto:info@webeaze.io">info@webeaze.io</a></strong> to get a complete list of samples.
+                    Yes! Some are shown on our <a href="index.html">homepage</a>. If you're inquiring about a specific type of website, we can provide you with samples that are similar to what you're looking for. Please <strong><a href="mailto:support@webeaze.io">email us</a></strong> to get a complete list of samples.
                 </p>
             </div>
         
