--- a/index.html
+++ b/index.html
@@ -1178,7 +1178,7 @@
 
         <h2 id="intro-services-html-next1">
 
-            <strong>WebEaze </strong> is a small web design agency, designed to create meaningful websites that include dedicated support, all for one low price. No hourly rates, no gimmicks.
+            <strong>WebEaze </strong> is a small web design agency serving the USA. We're here to create meaningful websites that include dedicated support and web optimization, all for one low price. No hourly rates, no gimmicks.
         </h2>
 
 
@@ -1508,7 +1508,7 @@
             <div class="faq-item">
                 <h3 class="faq-question">Do you have any samples?<span class="arrow"> ▼ </span></h3>
                 <p class="faq-answer">
-                    Yes! We have a few samples under our 'Samples are important' section. You can also email us at <a href="mailto:info@webeaze.io">info@webeaze.io</a> and we'll provide a full list of samples for you to look at. 
+                    Yes! We have a few samples under our 'Samples are important' section. You can also <a href="mailto:support@webeaze.io"><strong>email us</strong></a> and we'll provide a full list of samples for you to look at. 
                 </p>
             </div>
 
@@ -1743,7 +1743,8 @@
             "Fancy a new website? Welcome!",
             "Domains add professionalism. Do you have one?",
             "Need a website but don't know where to start?",
-            "Hourly rates? Forget it. One package starting at $699."
+            "Hourly rates? Forget it. One package starting at $699.",
+            "Welcome to WebEaze! How can we help you today?",
         ];
 
         const randomIndex = Math.floor(Math.random() * questions.length);
