Updated Refund Policy to stay consistent

--- a/refund-policy.html
+++ b/refund-policy.html
@@ -1241,8 +1241,7 @@
         <br>  
         <br>
 
-        <strong>Chargebacks and Disputes</strong>: In the event of a chargeback, you will be responsible for the full amount of the chargeback, as well as any additional fees that may be incurred. You will also lose access to all services provided by WebEaze. Any questions, or concerns? <a href="mailto:info@webeaze.io">Send us an email</a> and we will work with you to resolve them.
-
+        <strong>Chargebacks and Disputes</strong>: In the event of a chargeback, you will be responsible for the full amount of the chargeback, as well as any additional fees that may be incurred. You will also lose access to all services provided by WebEaze.
 
         <br>
         <br>
@@ -1255,10 +1254,9 @@
         <br>
         <br>
 
-        <strong>Unfinished Work</strong>: Rarely, WebEaze may contact you in regards to your website request in the event that we are unable to fulfill it. This doesn't grant you a full refund, however, we will review the situation and offer partial refund options. Funds paid are significantly used to cover the costs of the services, and the time used to research, plan, and deploy your website.
-
+        <strong>Unfinished Work</strong>: Rarely, WebEaze may contact you in regards to your website request in the event that we are unable to fulfill it. This doesn't grant you a refund. We strongly recommend that you <a href="https://calendly.com/webeaze/free-consultation"><strong>schedule a consultation with us</strong></a> before making a purchase to decide if we're a good fit for your website needs. Funds paid are significantly used to cover the costs of the services, and the time used to research, plan, and deploy your website.
         </p>
-        
+
         <p id="discount-notice" style="text-align: left; font-size: 20px; color: white;">If you have any questions regarding our Refund Policy, please <strong><a href="contact-us.html">contact us</a></strong> and we will be happy to help.
         </p>
 
