Updated header apperance

--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
 
 <body class="page-website-setup">
 
-    <header style="background-color: rgb(38, 38, 222);" class="page-website-setup-header">
+    <header style="background-color: rgba(38, 38, 222, 0.837);" class="page-website-setup-header">
 
         <br>
         <br>
