Updated Welcome Messages

--- a/index.html
+++ b/index.html
@@ -1744,7 +1744,10 @@
             "Domains add professionalism. Do you have one?",
             "Need a website but don't know where to start?",
             "Hourly rates? Forget it. One package starting at $699.",
-            "Welcome to WebEaze! How can we help you today?",
+            "Welcome to WebEaze!",
+            "Need a website? We're here to help.",
+            "Web design made easy.",
+            "Need a website? We've got you covered.",
         ];
 
         const randomIndex = Math.floor(Math.random() * questions.length);
